corrects add class for navigation menu and styling

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="css/styles.css" rel="stylesheet">
 </head>
 <body>
-    <nav>
+    <nav id="navbar">
         <ul id="nav_list"></ul>
     </nav>
     <main>
